feat: Modulo Pgr